Horizontal scroll fix

--- a/src/documents/styles/core/_normalize.styl
+++ b/src/documents/styles/core/_normalize.styl
@@ -1,8 +1,6 @@
 html
   font-size: 1em
   line-height: 1.4
-  width: 100vw
-  overflow-x: hidden
 
 body
   margin: 0
